--- a/src/components/month-picker/month-picker.component.html
+++ b/src/components/month-picker/month-picker.component.html
@@ -34,7 +34,7 @@
     <template ngFor let-iM [ngForOf]="months" let-i="index">
       <div *ngIf="i % monthsPerRow === 0" class="vclLayoutFlex vclDGRow vclLayoutAuto" role="row">
         <div *ngFor="let jM of months.slice(i, (i + monthsPerRow > months.length ? months.length : i + monthsPerRow)); let j = index;"
-          (tap)="selectMonth(i+j)"
+          (tap)="selectMonth(currentYear, i+j)"
           class="vclDGCell vclCalItem"
           [class.vclAvailable]="!useAvailableMonths || currentMeta[i+j].available"
           [class.vclUnavailable]="useAvailableMonths && !currentMeta[i+j].available"
@@ -47,12 +47,8 @@
           [attr.aria-selected]="currentMeta[i+j].selected"
           role="gridcell"
           tabindex="0">
-            <div *ngIf="jM.label" class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemLabel">
-              {{jM.label | loc}}
-            </div>
-
-            <div *ngIf="jM.sublabel" class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemSublabel">
-              {{jM.sublabel | loc}}
+            <div class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemLabel">
+              {{months[i + j] | loc}}
             </div>
         </div>
       </div>
