--- a/src/components/dropdown/dropdown.component.html
+++ b/src/components/dropdown/dropdown.component.html
@@ -12,7 +12,7 @@
     [class.vclDisabled]="item.disabled"
     role="menuitem"
     tabindex="0"
-    (tap)="clickItem(item)"
+    (tap)="selectItem(item)"
     [ngClass]="item.class">
     <div class="vclDropdownItemLabel">
       {{item.label}}
