--- a/demo/components/layer/demo.component.html
+++ b/demo/components/layer/demo.component.html
@@ -1,11 +1,11 @@
 Press escape to close the top layer<br><br>
 
 <button vcl-button (tap)="layerNonModal.open()" label="open non-modal layer per reference"></button>
-<button vcl-button (tap)="layer1.open()" label="open modal layer"></button>
-<button vcl-button (tap)="openLayerWithData()" label="open layer programmatically"></button>
+<button vcl-button (tap)="layerModal.open()" label="open modal layer per reference"></button>
+<button vcl-button (tap)="openLayer()" label="open layer programmatically"></button>
 <button vcl-button (tap)="openComponentLayer()" label="open component layer"></button>
 
-<template vcl-layer #layerNonModal="layer" [modal]="false" [name]="'nonModal'">
+<template vcl-layer #layerNonModal="layer" [modal]="false">
   <div class="vclPanel vclNoMargin">
     <div class="vclPanelHeader">
       <h3 class="vclPanelTitle">Non-modal layer title goes here</h3>
@@ -19,45 +19,30 @@ Press escape to close the top layer<br><br>
   </div>
 </template>
 
-<template vcl-layer #layer1="layer">
+<template vcl-layer #layerModal="layer" [modal]="true">
   <div class="vclPanel vclNoMargin">
     <div class="vclPanelHeader">
       <h3 class="vclPanelTitle">Modal layer 1 title goes here</h3>
     </div>
     <div class="vclPanelBody">
       <p class="vclPanelContent">
-        Modal layer 1 text goes here<br><br>
-        <button vcl-button (tap)="layer2.open()" label="open Layer2"></button>
-        <button vcl-button (tap)="layer1.close()" label="close Layer"></button>
+        Modal layer text goes here<br><br>
+        <button vcl-button (tap)="layerModal2.open()" label="open modal layer 2"></button>
+        <button vcl-button (tap)="layerModal.close()" label="close Layer"></button>
       </p>
     </div>
   </div>
 </template>
 
-<template vcl-layer #layer2="layer" [modal]="false">
+<template vcl-layer #layerModal2="layer" [modal]="true">
   <div class="vclPanel vclNoMargin">
     <div class="vclPanelHeader">
-      <h3 class="vclPanelTitle">Non-modal layer 2 title goes here</h3>
+      <h3 class="vclPanelTitle">Modal layer 2 title goes here</h3>
     </div>
     <div class="vclPanelBody">
       <p class="vclPanelContent">
-        non-modal layer 2 text goes here<br><br>
-        <button vcl-button (tap)="layer2.close()" label="close Layer"></button>
-      </p>
-    </div>
-  </div>
-</template>
-
-<template vcl-layer #layerWithData="layer" [modal]="false" [name]="'withData'">
-  <div class="vclPanel vclNoMargin">
-    <div class="vclPanelHeader">
-      <h3 class="vclPanelTitle">{{layerWithData.data.title}}</h3>
-    </div>
-    <div class="vclPanelBody">
-      <p class="vclPanelContent">
-        Send data by pressing the buttons<br><br>
-        <button vcl-button (tap)="layerWithData.send('send')" label="Send data"></button>
-        <button vcl-button (tap)="layerWithData.close('close')" label="close Layer"></button>
+        Modal layer 2 text goes here<br><br>
+        <button vcl-button (tap)="layerModal2.close()" label="close Layer"></button>
       </p>
     </div>
   </div>
