--- a/src/components/layer/layer-base.component.html
+++ b/src/components/layer/layer-base.component.html
@@ -1,8 +1,8 @@
-<div *ngFor="let layer of visibleLayers; let i = index;">
-  <div class="vclLayer" role="dialog" [@boxState]="layer.state" [style.pointer-events]="'none'" [style.z-index]="zIndex + (i*10+1)">
-    <div class="vclLayerBox vclLayerGutterPadding" [style.pointer-events]="'all'" (off-click)="layer.offClick()">
-      <div [connectWormhole]="layer" [wormholeIndisposable]="true"></div>
+<div *ngFor="let layerRef of layerRefs; let i = index;">
+  <div class="vclLayer" role="dialog" [@boxState]="layerRef.visible" [style.pointer-events]="'none'" [style.z-index]="zIndex + (i*10+1)">
+    <div class="vclLayerBox vclLayerGutterPadding" [style.pointer-events]="'all'" (off-click)="offClick(layerRef)">
+      <div [connectWormhole]="layerRef.wormhole" [wormholeIndisposable]="true"></div>
     </div>
   </div>
-  <div *ngIf="layer.modal" class="vclLayerCover" [@layerState]="layer.state" [style.z-index]="zIndex + (i*10+0)"></div>
+  <div *ngIf="layerRef.modal" class="vclLayerCover" [@layerState]="layerRef.visible" [style.z-index]="zIndex + (i*10+0)"></div>
 </div>
