--- a/src/components/metalist/metalist.component.html
+++ b/src/components/metalist/metalist.component.html
@@ -1,5 +1,5 @@
 <template
   *ngFor="let item of items"
-  [ngTemplateOutlet]="template"
+  [ngTemplateOutlet]="template1"
   [ngOutletContext]="{item: item, meta: getMeta(item) }">
 </template>
