--- a/src/components/jss-form/jss-form-object.component.html
+++ b/src/components/jss-form/jss-form-object.component.html
@@ -32,7 +32,7 @@ style="border-style:solid;margin:5px;padding: 5px;">
         <vcl-input-control-group [type]="'error'" [label]="fieldErrors[key]">
           <vcl-select [formControlName]="key">
             <vcl-select-option *ngFor="let option of selectItems(schema.properties[key])"
-              [label]="option.label" [value]="option.value"></vcl-select-option>
+              [value]="option.value">{{option.label}}</vcl-select-option>
           </vcl-select>
         </vcl-input-control-group>
       </div>
