FINISH file-input

--- a/demo/components/file-input/file-input.component.html
+++ b/demo/components/file-input/file-input.component.html
@@ -4,3 +4,6 @@
 
 <h3>File Input (Disabled)</h3>
 <vcl-file-input [disabled]="true">My biggest File</vcl-file-input>
+
+<h3>File Input (multiple)</h3>
+<vcl-file-input [multiple]="true">My biggest Files</vcl-file-input>
