--- a/src/components/file-input/file-input.component.html
+++ b/src/components/file-input/file-input.component.html
@@ -1,5 +1,9 @@
-<input type="file" style="display: none;" #input />
+<input #input type="file" style="display: none;" [accept]="accept" [multiple]="multiple" [placeholder]="placeholder" />
 <div class="vclFileInputIcon vclIcon fa fa-upload" aria-hidden="true" aria-label="account" role="img"></div>
 <div class="vclFileInputPlaceholder">
-  <ng-content></ng-content>
+
+  <div *ngIf="value$ | async">{{ value$ | async }}</div>
+  <div *ngIf="!(value$ | async)">
+    <ng-content></ng-content>
+  </div>
 </div>
