FIX readme for file-input

--- a/src/components/file-input/file-input.component.html
+++ b/src/components/file-input/file-input.component.html
@@ -1,4 +1,4 @@
-<input #input type="file" style="display: none;" [accept]="accept" [multiple]="multiple" [placeholder]="placeholder" />
+<input #input type="file" style="display: none;" [accept]="accept" [multiple]="multiple" [placeholder]="placeholder" [disabled]="disabled" />
 <div class="vclFileInputIcon vclIcon fa fa-upload" aria-hidden="true" aria-label="account" role="img"></div>
 <div class="vclFileInputPlaceholder">
 
