REFACTOR vcl-input

--- a/demo/components/input/input.component.html
+++ b/demo/components/input/input.component.html
@@ -1,13 +1,13 @@
-<h3>Input</h3>
-<input vcl-input [(ngModel)]="data1">
-<br>
-<b>Input 1 value:</b> {{data1}}
+<h3>Input2</h3>
+<vcl-input [(value)]="data1"></vcl-input>
+  <br>
+  <b>Input 1 value:</b> {{data1}}
 
 <br>
 <br>
 <br>
 <h3>Input 2 (selectAllOnFocus)</h3>
-<input vcl-input [(ngModel)]="data2" selectAllOnFocus=true>
+<vcl-input [(value)]="data2" selectAllOnFocus=true></vcl-input>
 <br>
 <b>Input 2 value:</b> {{data2}}
 
@@ -15,7 +15,7 @@
 <br>
 <br>
 <h3>Input 3 (valueType="number")</h3>
-<input vcl-input [(typedValue)]="data3" valueType="number" selectAllOnFocus=true>
+<vcl-input [(value)]="data3" type="number" selectAllOnFocus=true></vcl-input>
 <br>
 <b>Input 3 typed value (number):</b> {{data3}}
 
@@ -23,5 +23,13 @@
 <br>
 <br>
 <h3>Input (readOnly)</h3>
-<input vcl-input value='readOnly' readOnly=true>
+<vcl-input value='readOnly' readOnly=true></vcl-input>
+<br>
+
+
+<br>
+<br>
+<br>
+<h3>Input (selectAllOnFocus)</h3>
+<vcl-input value='readOnly' [readOnly]="true" [selectAllOnFocus]="true"></vcl-input>
 <br>
