--- a/src/components/input/input.component.html
+++ b/src/components/input/input.component.html
@@ -3,6 +3,12 @@
   [(value)]="value"
   [(placeholder)]="placeholder"
   [type]="type"
-  [readOnly]="readOnly"
+  [readonly]="readonly"
+  [autofocus]="autofocus"
+  [required]="required"
+  [spellcheck]="spellcheck"
+  [tabindex]="tabindex"
+  [maxLength]="maxLength"
+  [minLength]="minLength"
   (focus)="onFocus()"
- />
+/>
