ADD file-input check accept-types on drop

--- a/demo/components/file-input/file-input.component.html
+++ b/demo/components/file-input/file-input.component.html
@@ -3,7 +3,10 @@
 
 
 <h3>File Input (Disabled)</h3>
-<vcl-file-input [disabled]="true">My biggest File</vcl-file-input>
+<vcl-file-input [disabled]="true">One File</vcl-file-input>
 
 <h3>File Input (multiple)</h3>
-<vcl-file-input [multiple]="true">My biggest Files</vcl-file-input>
+<vcl-file-input [multiple]="true">Many Files</vcl-file-input>
+
+<h3>File Input (.png only)</h3>
+<vcl-file-input accept="image/png">An Image</vcl-file-input>
