--- a/src/components/select/select.component.html
+++ b/src/components/select/select.component.html
@@ -25,7 +25,7 @@
     [maxSelectableItems]="maxSelectableItems"
     [tabindex]="0"
 
-    [style.top]="'-1px'"
     [style.position]="'relative'"
+    [style.top.px]="dropdownTop"
     >
 </vcl-dropdown>
