--- a/src/components/select/select.component.html
+++ b/src/components/select/select.component.html
@@ -6,9 +6,26 @@
   [style.marginBottom]="0"
   >
 
-  <div class="vclInput" readonly>
+  <div class="vclInput" readonly *ngIf="!displayValueTokens()">
     {{displayValue}}
   </div>
+
+  <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="displayValueTokens()">
+    <div class="vclTokenContainer">
+      <ng-container *ngFor="let item of dropdown.items">
+        <div *ngIf="item.selected" class="vclToken">
+          <span class="vclTokenLabel">{{item.label}}</span>
+          <button type="button" tabindex="-1" touch-action="none" aria-label="Remove" title="Remove"
+          class="vclTransparent vclButton">
+            <div class="vclIcogram" (click)="unselectItem(item)">
+              <span role="img" class="vclIcon fa fa-remove"></span>
+            </div>
+          </button>
+        </div>
+      </ng-container>
+    </div>
+  </div>
+
 
   <button vcl-button
     tabindex="-1"
