button: disable button when busy

--- a/demo/components/button/button.component.html
+++ b/demo/components/button/button.component.html
@@ -1,8 +1,8 @@
-<button vcl-button (tap)="someAction($event)" label="Action"></button>
+<button vcl-button (tap)="someAction($event)" label="Button"></button>
 <br><br>
-<button vcl-button (tap)="someAction($event)" label="Action with appended icon" appIcon="fa:bolt"></button>
+<button vcl-button (tap)="someAction($event)" label="Button with appended icon" appIcon="fa:bolt"></button>
 <br><br>
-<button vcl-button (tap)="someAction($event)" label="Action with prepended icon" prepIcon="fa:bolt"></button>
+<button vcl-button (tap)="someAction($event)" label="Button with prepended icon" prepIcon="fa:bolt"></button>
 <br><br>
 <button vcl-button (tap)="someAction($event)" class="vclSquare" appIcon="fa:bolt"></button>
 <br><br>
@@ -10,15 +10,15 @@
 <br><br>
 <button vcl-button (tap)="someAction($event)" flexLabel=true label="Flexed Label"></button>
 <br><br>
-<button vcl-button (tap)="someAction($event)" label="Action" busy=true busyLabel='Busy label...'></button>
+<button vcl-button (tap)="someAction($event)" label="Busy button" busy=true busyLabel='Busy label...'></button>
 <br><br>
-<button vcl-button (tap)="someAction($event)" label="Action with appended busy icon" appIcon="fa:bolt" busy=true appIconBusy="fa:spinner fa-pulse"></button>
+<button vcl-button (tap)="someAction($event)" label="Busy button with appended busy icon" appIcon="fa:bolt" busy=true appIconBusy="fa:spinner fa-pulse"></button>
 <br><br>
-<button vcl-button (tap)="someAction($event)" label="Action with prepended busy icon" prepIcon="fa:bolt" busy=true prepIconBusy="fa:refresh fa-spin"></button>
+<button vcl-button (tap)="someAction($event)" label="Busy button with prepended busy icon" prepIcon="fa:bolt" busy=true prepIconBusy="fa:refresh fa-spin"></button>
 <br><br>
 <button vcl-button (tap)="someAction($event)" disabled=true label="Disabled button" prepIcon="fa:bolt"></button>
 <br><br>
-<button vcl-button (tap)="changeButtonState()" prepIcon="fa:bolt" [busy]="busy" [disabled]="disabled">
+<button vcl-button (tap)="changeButtonState()" prepIcon="fa:bolt" prepIconBusy="fa:refresh fa-spin" [busy]="busy" [disabled]="disabled">
   Content for
   <template vcl-button-content state="enabled">enabled state</template>
   <template vcl-button-content state="disabled">disabled state</template>
