--- a/src/components/dropdown/dropdown.component.html
+++ b/src/components/dropdown/dropdown.component.html
@@ -7,6 +7,7 @@
   <li
     *ngFor="let item of items"
     class="vclDropdownItem"
+    [class.vclHighlighted]="item.marked"
     [class.vclSelected]="item.selected"
     [attr.aria-selected]="item.selected"
     [class.vclDisabled]="item.disabled"
