demo: fix search input

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -17,8 +17,8 @@
           <vcl-icon icon="fa:search"></vcl-icon>
         </span>
 
-        <input vcl-input #searchInput (keyup)="search(searchInput.value)"
-          class="vclNoBorder vclPrepItem vclAppItem searchInput"
+        <input #searchInput (keyup)="search(searchInput.value)"
+          class="vclInput vclNoBorder vclPrepItem vclAppItem searchInput"
           type="search"
           name="search"
           placeholder="Search Modules"
