--- a/demo/components/input/input.component.html
+++ b/demo/components/input/input.component.html
@@ -1,5 +1,5 @@
 <h3>Input2</h3>
-<vcl-input [(value)]="data1"></vcl-input>
+<input vcl-input [(ngModel)]="data1" />
   <br>
   <b>Input 1 value:</b> {{data1}}
 
@@ -7,7 +7,7 @@
 <br>
 <br>
 <h3>Input 2 (selectOnFocus)</h3>
-<vcl-input [(value)]="data2" selectOnFocus=true></vcl-input>
+<input vcl-input [(ngModel)]="data2" selectOnFocus=true />
 <br>
 <b>Input 2 value:</b> {{data2}}
 
@@ -15,7 +15,7 @@
 <br>
 <br>
 <h3>Input 3 (type="number")</h3>
-<vcl-input [(value)]="data3" type="number"></vcl-input>
+<input vcl-input [(ngModel)]="data3" type="number" />
 <br>
 <b>Input 3 typed value (number):</b> {{data3}}
 
@@ -23,13 +23,5 @@
 <br>
 <br>
 <h3>Input (readonly)</h3>
-<vcl-input value='readOnly' readonly=true></vcl-input>
-<br>
-
-
-<br>
-<br>
-<br>
-<h3>Input (selectAllOnFocus)</h3>
-<vcl-input value='select' [selectOnFocus]="true"></vcl-input>
+<input vcl-input value='readOnly' readonly=true />
 <br>
