layer: allow defininition of custom layer class

--- a/src/components/layer/layer-base.component.html
+++ b/src/components/layer/layer-base.component.html
@@ -1,6 +1,7 @@
 <div *ngFor="let layerRef of layerRefs; let i = index;">
   <div 
-    class="vclLayer" 
+    class="vclLayer"
+    [ngClass]="layerRef.customClass"
     [class.vclTransparent]="layerRef.transparent"
     [class.vclLayerFill]="layerRef.fill"
     [class.vclLayerStickToBottom]="layerRef.stickToBottom"
