--- a/src/components/select/select.component.html
+++ b/src/components/select/select.component.html
@@ -5,11 +5,11 @@
   [style.marginBottom]="0"
   >
 
-  <div class="vclInput" readonly *ngIf="!displayValueTokens()">
+  <div class="vclInput" readonly *ngIf="!displayValueTokens()" [class.vclSelected]="focused">
     {{displayValue}}
   </div>
 
-  <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="displayValueTokens()">
+  <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="displayValueTokens()" [class.vclSelected]="focused">
     <div class="vclTokenContainer">
       <ng-container *ngFor="let item of dropdown.items">
         <div *ngIf="item.selected" class="vclToken">
