[metalist, input, select, dropdown]: Array.includes() -> includes() from utils.ts for IE11 compatibility; package.json update

--- a/src/components/month-picker/month-picker.component.html
+++ b/src/components/month-picker/month-picker.component.html
@@ -50,7 +50,7 @@
           role="gridcell"
           tabindex="0">
             <div class="vclLayoutHorizontal vclLayoutCenterJustified vclMonthPickerListItemLabel">
-              {{months[i + j] | loc}}
+              {{months[i + j]}}
             </div>
         </div>
       </div>
