FIX(select) dropdown is under following element

--- a/src/components/select/select.component.html
+++ b/src/components/select/select.component.html
@@ -41,5 +41,8 @@
     tabindex="-1"
     [style.position]="'relative'"
     [style.top.px]="dropdownTop"
+    [style.width]="'100%'"
+    [style.position]="'absolute'"
+    [style.zIndex]="999999"
     >
 </vcl-dropdown>
