wormhole: support events, optimizations & refactoring - connect() - allow to pass events and return an observable - better markForCheck() workaround when updating attrs - rename setData() to setAttributes() - remove Wormhole/ComponentWormhole class - remove TemplateWormhole directive - rename WormholeRef to Wormhole - introduce createWormhole() helper function - rename [connectWormhole] directive to [wormhole]

--- a/demo/components/wormhole/wormhole.component.html
+++ b/demo/components/wormhole/wormhole.component.html
@@ -1,12 +1,11 @@
 The template wormhole is defined above the hr
-<template wormhole #myFirstTemplateWormhole="wormhole">
+<template #someTemplate>
   But is rendered below
 </template>
 <hr>
-<div [connectWormhole]="myFirstTemplateWormhole">
+<div [wormhole]="someTemplate">
 </div>
 <hr>
-<div [connectWormhole]="componentWormhole" [wormholeData]="componentWormholeData"></div>
 <div #target></div>
 
 
